error_templates/java/test_files/non_static_method_access_error/test.txt
template: "Java.NonStaticMethodAccessError"
---
Main.java:9: error: non-static method printMessage() cannot be referenced from a static context
        printMessage(); // This will result in an error
        ^
1 error
===
template: "Java.NonStaticMethodAccessError"
---
# NonStaticMethodAccessError
This error occurs when trying to access a non-static method from a static context. In Java, a non-static method belongs to an instance of the class and needs an object to be called upon.
```
        // Attempt to call the non-static method without creating an object
        printMessage(); // This will result in an error
        ^^^^^^^^^^^^
    }
}
```
## Steps to fix
### Instantiate and call the method
Create an instance of the class to access the non-static method
```diff
    public static void main(String[] args) {
        // Attempt to call the non-static method without creating an object
-         printMessage(); // This will result in an error
+         Main obj = new Main();
+         obj.printMessage(); // This will result in an error
    }
}
```
